syntax = "proto3";

package echo;

option java_package = "com.github.teodorpripoae.proto.echo";
option java_multiple_files = true;

message EchoRequest {
    string name = 1;
}

message EchoResponse {
    string message = 1;
}

service EchoServer {
    rpc Echo(EchoRequest) returns(EchoResponse);
}
